create header section relates#3

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/style.css">
-    <title>Document</title>
+    <title>Reflex</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+            <div class="imgIntro">
+                <img src="./assets/buildings.jpg" alt="buildings">
+            </div>
+            <div class="prgIntro">
+                <h1>Reflex</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Nostrum sit ratione velit distinctio 
+                    dignissimos qui consequuntur fugit modi quidem,
+                     accusamus a officiis. </p>
+                <button>GET STARTED</button>      
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
