--- a/index.html
+++ b/index.html
@@ -1,32 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <title>Reflex</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header">
-            <div class="imgIntro">
-                <img src="./assets/buildings.jpg" alt="buildings">
-            </div>
-            <div class="prgIntro">
-                <h1>Reflex</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Nostrum sit ratione velit distinctio 
-                    dignissimos qui consequuntur fugit modi quidem,
-                     accusamus a officiis. </p>
-                <button>GET STARTED</button>      
-            </div>
+      <div class="header">
+        <div class="imgIntro">
+          <img src="./assets/buildings.jpg" alt="buildings" />
         </div>
+        <div class="prgIntro">
+          <h1>Reflex</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sit
+            ratione velit distinctio dignissimos qui consequuntur fugit modi
+            quidem, accusamus a officiis.
+          </p>
+          <button>GET STARTED</button>
+        </div>
+      </div>
     </header>
     <main>
-
+      <section class="about">
+        <hr class="first-line" />
+        <h2>Ipsum malesuada</h2>
+        <p class="description">
+          eprehenderit asperiores, ullam veniam architecto alias,
+          dolores libero,reiciendis aliquam repudiandae.
+        </p>
+        <hr class="linethroue" />
+        <ul>
+          <li><i class="fa-solid fa-code"></i></li>
+          <li><i class="fa-solid fa-gear"></i></li>
+          <li><i class="fa-solid fa-gem"></i></li>
+          <li><i class="fa-solid fa-camera-retro"></i></li>
+          <li><i class="fa-solid fa-briefcase"></i></li>
+        </ul>
+        <p class="descText">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+          dolores quia quaerat. Culpa, alias! Reprehenderit asperiores, ullam
+          veniam architecto alias omnis modi, dolores libero, reiciendis aliquam
+          repudiandae. Placeat, pariatur corrupti!
+        </p>
+        <button class="det-button">DETAILS</button>
+      </section>
     </main>
-    <footer>
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
