adding style to services section relates#8

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <hr class="first-line" />
         <h2>Ipsum malesuada</h2>
         <p class="description">
-          eprehenderit asperiores, ullam veniam architecto alias,
-          dolores libero,reiciendis aliquam repudiandae.
+          eprehenderit asperiores, ullam veniam architecto alias, dolores
+          libero,reiciendis aliquam repudiandae.
         </p>
         <hr class="linethroue" />
         <ul>
@@ -44,6 +44,65 @@
           <li><i class="fa-solid fa-camera-retro"></i></li>
           <li><i class="fa-solid fa-briefcase"></i></li>
         </ul>
+        <p class="descText">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+          dolores quia quaerat. Culpa, alias! Reprehenderit asperiores, ullam
+          veniam architecto alias omnis modi, dolores libero, reiciendis aliquam
+          repudiandae. Placeat, pariatur corrupti!
+        </p>
+        <button class="det-button">DETAILS</button>
+      </section>
+      <section class="services">
+        <hr />
+        <h2>Duis torquent</h2>
+        <p class="description">
+          eprehenderit asperiores, ullam veniam architecto alias, dolores
+          libero,reiciendis aliquam repudiandae.
+        </p>
+        <div class="row-revers">
+          <div class="image">
+            <img src="./assets/airport.jpg" alt="airport" />
+          </div>
+          <div class="text">
+            <hr class="title-line" />
+            <h3>Aliquam veroeros</h3>
+            <p>
+              Lorem ipsum dolor sit amet. consectetur adipiscing elit. Duis
+              dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora
+              torquent per conubia nostra, per inceptos himenaeos magna fames ac
+              turpis egestas amet non lorem amet
+            </p>
+            <button>DETAILS</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="image"><img src="./assets/bear.jpg" alt="bear" /></div>
+          <div class="text">
+            <hr class="title-line" />
+            <h3>Nostra adpiscing</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+              dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora
+              torquent per conubia nostra, per inceptos himenaeos magna fames ac
+              turpis egestas amet non lorem amet
+            </p>
+            <button>DETAILS</button>
+          </div>
+        </div>
+        <div class="row-revers">
+          <div class="image"><img src="./assets/man.jpg" alt="man" /></div>
+          <div class="text">
+            <hr class="title-line" />
+            <h3>Tempus litoria</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+              dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora
+              torquent per conubia nostra, per inceptos himenaeos magna fames ac
+              turpis egestas amet non lorem amet
+            </p>
+            <button>DETAILS</button>
+          </div>
+        </div>
         <p class="descText">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
           dolores quia quaerat. Culpa, alias! Reprehenderit asperiores, ullam
