create read more section relates#10

--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
         </p>
         <button class="det-button">DETAILS</button>
       </section>
+      <section class="more-info">
+        <hr />
+        <h2>Amet ullamcorper</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+          dolores quia quaerat. Culpa, alias! Reprehenderit asperiores, ullam
+          veniam architecto alias omnis modi, dolores libero, reiciendis aliquam
+          repudiandae. Placeat, pariatur corrupti!
+        </p>
+        <button class="det-button">GET STAETED</button>
+      </section>
     </main>
     <footer></footer>
   </body>
