create footer relates#12

--- a/index.html
+++ b/index.html
@@ -123,6 +123,34 @@
         <button class="det-button">GET STAETED</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="row">
+        <div class="ref">
+          <hr />
+          <h3>Magana lorem ipsum</h3> 
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat cum
+            odio nesciunt eius voluptates architecto, et numquam doloribus dicta
+            sunt cumque animi natus atque aspernatur exercitationem. Soluta sunt
+          </p>
+          <ul>
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-brands fa-snapchat"></i></li>
+            <li><i class="fa-brands fa-github"></i></li>
+          </ul>
+        </div>
+        <div class="form">
+          <form>
+            <input type="text" name="name" value="Name">
+            <input type="text" name="email" value="Email">
+            <textarea id="message" rows="4" cols="50">message</textarea>
+            <button>SEND MESSAGE</button>
+          </form>
+        </div>
+      </div>
+      <hr>
+      <p>@ untitled.All rights reseved Lorem ipsum dolor sit</p>
+    </footer>
   </body>
 </html>
